[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
im = "15.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"

[profile.release]
opt-level = "s"
