[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
im = "15.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tailcall = "0.1.6"
